deployments/k8s/workloads/base/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
  - name: http
    port: 8084
    targetPort: http
    protocol: TCP
  sessionAffinity: None
